--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "tailwind-merge": "^2.2.0",
-    "vite-plugin-pwa": "^0.17.0"
+    "vite-plugin-pwa": "^0.17.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^4.0.0",
     "typescript": "^5.2.0",
     "vite": "^5.0.0",
     "vitest": "^4.0.16"
