--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "@tailwindcss/node": "^4.1.18",
     "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/vite": "^4.1.18",
     "clsx": "^2.1.0",
     "date-fns": "^3.0.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.300.0",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "tailwind-merge": "^2.2.0",
-    "vite-plugin-pwa": "^0.17.0",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.0.0",
+    "vite-plugin-pwa": "^0.17.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
