--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -12,25 +15,25 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@vitejs/plugin-react": "^4.2.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.0.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.300.0",
+    "magic-string": "^0.30.21",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.2.0",
+    "vite": "^7.3.0",
     "vite-plugin-pwa": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "magic-string": "^0.30.21",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.2.0",
-    "vite": "^7.3.0",
     "vitest": "^4.0.16"
   }
 }
