--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "date-fns": "^3.0.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.300.0",
-    "magic-string": "^0.30.21",
+    "magic-string": "0.30.5",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
